--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>VEGGO - Proximamente</title>
-        <meta name="description" content="VEGGO - Proximamente">
-        <meta name="keywords" content="VEGGO">
+        <title>VEGGO MAYORISTA - Proximamente</title>
+        <meta name="description" content="VEGGO MAYORISTA - Proximamente">
+        <meta name="keywords" content="VEGGO MAYORISTA">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
 
         <!-- build:css assets/css/compiled.min.css -->
