--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="col-xs-6 contenido_texto">
                     <img class="icono" src="assets/img/icono.png"><br />
                     <div class="texto" style="color: #fff;">
-                        Próximamente <span style="color: #fcbf00;">más sorpresas en tu app de Frutas y Verduras favorita.</span>
+                        Pronto, <span style="color: #fcbf00;">el Supermercado Digital B2B que conecta productores con el comercio.</span>
+                                <span>Nuestra misión es ser un punto de compra para restaurantes en LATAM.</span>                        
                     </div>
                     <img class="apps" src="assets/img/apps.png">
                 </div>
